# chat

./: .gitignore  CMakeLists.txt  README.md
include/: chat_data.h  chat_manager.h  chat_record.h  chat_unread.h
src/: chat_data.cpp  chat_manager.cpp
test/: CMakeLists.txt
test/chat_server/: CMakeLists.txt  chat_server.cpp  chat_server.h  server_main.cpp
